--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "context-form": "^1.1.1",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
